--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ text-decoration: none;
 	color:#ffffff;}
 /*-----SIDEBAR CUSTOM CSS ------*/
 .widget .widget_nav_menu ul .menu{
-	list-style-type: none;
+	list-style-type: none !important;
 	margin-left: 20px;
 }
 
