--- a/style.css
+++ b/style.css
@@ -89,6 +89,10 @@ text-decoration: none;
 	border-top:1px solid #03a8d4;
 }
 
+#credit320{
+	color:#fff;
+}
+
 /*-----404 CUSTOM CSS ------*/
 /*-----HOVER EFFECTS CUSTOM CSS ------*/
 /*-----COURSES CUSTOM ------*/
